--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,11 @@
 }
 
 
-#mainheader {
+/* .hero-section {
   background-image: url("./assets/images/FB_IMG_1575093313783.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   height: 20vh;
 
-}
+} */
