--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,12 @@
   }
 }
 
-
-/* .hero-section {
+/* 
+.leadform {
   background-image: url("./assets/images/FB_IMG_1575093313783.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 20vh;
+ 
 
 } */
